# DorkVault

./: .gitignore  INSANE PK   GOOGLE DORKS COMPLETE COLLECTION.txt  LICENSE  README.md  pyproject.toml  requirements.txt
.release_smoke_appdata/DorkVault/: favorites.json  recents.json  settings.json
.release_smoke_appdata/DorkVault/exports/: query.txt  techniques.json
.release_smoke_packaged_runtime_gui2/DorkVault/: recents.json  settings.json
docs/: architecture.md  assets_resolution.md  data-format.md  data_model.md  packaging.md  technique_packs.md  technique_schema.md  ui_plan.md
docs/reports/: catalog_build_report.md  insane_pk_import_report.md
git repo ready files/DorkVault-release/: LICENSE  README.md
scripts/: build_app_icons.py  build_catalogs.py  build_exe.ps1  import_techniques.py  run_dev.ps1  validate_techniques.py
src/dorkvault/: __init__.py  __main__.py  main.py
src/dorkvault/core/: __init__.py  config.py  constants.py  exceptions.py  models.py
src/dorkvault/data/: __init__.py
src/dorkvault/services/: __init__.py  browser_service.py  clipboard_service.py  custom_technique_service.py  export_service.py  (+16 more)
tests/: conftest.py  test_browser_service.py  test_bundled_catalogs.py  test_clipboard_service.py  test_custom_technique_service.py  test_detail_panel.py  test_export_service.py  test_favorites_service.py  test_launcher_service.py  test_main_entrypoint.py  test_main_window.py  test_query_renderer.py  test_recent_history_service.py  test_resource_loader.py  test_settings_service.py  test_target_normalization.py  test_technique_catalog_builder.py  test_technique_catalog_validator.py  test_technique_filter_service.py  test_technique_importer.py  test_technique_list.py  test_technique_loader.py  test_technique_preview_service.py  test_technique_repository.py  test_technique_schema.py
(+27 files in other folders)
